2003-04-17  Alex Duggan  <aldug@astrolinux.com>

	* configure.in:
	* Galaxy/Makefile.am:
	move metacity theme from metacity to metacity-1
	
	* BlueSphere/icons/Makefile.am:
	translate index.theme.in
	
2003-04-04  Yanko Kaneti <yaneti@declera.com>

	* configure.in:
	* gnome-themes-extras.spec.in (added): First spec. 
	* Galaxy/gtk-2.0/Makefile.am: 
	* Makefile.am: install the Galaxy theme in the correct place.

2003-03-39  Christian F.K. Schaller <Uraeus@gnome.org>
	* Added Lush, BlueSphere and Galaxy themes

2003-03-22  Christian F.K. Schaller <Uraeus@gnome.org>

	* Added Nuvola icon theme

2003-03-21  Jakub Steiner <jimmac@ximian.com>

	* emblems/emblem-video.svg -> emblem-multimedia: 
	* emblems/emblem-seal.svg -> emblem-distinguished: rename
	* emblem-danger.svg:
	* emblem-ohno.svg:
	* emblem-important.svg:
	* emblem-generic.svg:
	* emblem-cool.svg: replace the default

   * gnome-fs-network.svg:
   * gnome-fs-server.svg: make 3d

2003-03-06  Jakub Steiner <jimmac@ximian.com>

	* COPYING: it should have a license
	* AUTHORS: ..and authors

2003-02-05  Jakub Steiner <jimmac@ximian.com>

	* my-computer.svg: perfectioning the shadow, fixed a stroke type
	  (there's a rendering bug in librsvg if the closed path uses
	  'square' brush.

2003-02-05  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/icons/scalable/mimetypes/Makefile.am: stuffit symlink
	* my-computer.svg: drop the gnome foot, too complex. color,
     bounding box.

2003-02-03  Jakub Steiner <jimmac@ximian.com>

	* gnome-mime-application-x-rpm.svg:
	* gnome-mime-application-x-deb.svg: temporary, need correct
	 perspective
	* gnome-terminal.svg:
	* my-computer.svg: finally I managed to actually do something
	  new. Scaling old stuff isn't much fun.
	* Gorilla/icons/scalable/mimetypes/Makefile.am: add symlink for
	  oggs
	
2003-01-24  Jakub Steiner <jimmac@ximian.com>

	* *.svg: s/px/pt/ - be resolution independent. I hope Nautilus
	  will scale the icons appropriately on different DPI settings